--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "@auth0/angular-jwt": "^5.0.2",
     "@sencha/ext-angular-modern": "^7.3.0",
     "@sencha/ext-modern-runtime": "^7.3.3",
+    "jsonwebtoken": "^8.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -33,7 +35,7 @@
     "@angular/cli": "~11.0.7",
     "@angular/compiler-cli": "~11.0.9",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.6",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
